# new-ass-vibecoded-sip-client

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  hi from the creator
data/: CMakeLists.txt  org.kde.sipclient.appdata.xml  org.kde.sipclient.desktop
packaging/: kde-sip-client.spec  org.kde.sipclient.yml
src/: CMakeLists.txt  main.cpp
src/accounts/: accountmanager.cpp  accountmanager.h
src/config/: configmanager.cpp  configmanager.h
src/core/: sipaccount.cpp  sipaccount.h  sipcall.cpp  sipcall.h  sipengine.cpp  sipengine.h
src/media/: audioengine.cpp  audioengine.h  pipewirebackend.cpp  pipewirebackend.h
src/network/: networkmanager.cpp  networkmanager.h
src/security/: credentialmanager.cpp  credentialmanager.h
src/ui/: accountspage.cpp  accountspage.h  callpage.cpp  callpage.h  contactspage.cpp  contactspage.h  dialerpage.cpp  dialerpage.h  historypage.cpp  historypage.h  mainwindow.cpp  mainwindow.h  settingspage.cpp  settingspage.h
src/utils/: logger.cpp  logger.h
tests/: CMakeLists.txt  test_audioengine.cpp  test_sipengine.cpp
